--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<mat-toolbar id="toolbar">
-    <a href="/"><img src="../assets/images/drawer.png" height="15"></a>
-    <a href="/"><img src="../assets/images/logo.png " height="35 "></a>
-    <input type="search " size="80px " placeholder="Search " name="search " id="search-bar">
-    <a href="/login "><img src="../assets/images/login.png " height="25 ">Log in</a>
-    <a href="/signup "><img src="../assets/images/signup.png " height="25 ">Sign up</a>
+<mat-toolbar id="toolbar" fxLayout="row" fxLayoutAlign="space-evenly center">
+    <a href="/"><img src="../assets/images/drawer.png" height="12"></a>
+    <a href="/"><img src="../assets/images/logo.png " height="30 "></a>
+    <input type="search " placeholder="Search " name="search " id="search-bar">
+    <a href="/login "><img src="../assets/images/login.png " height="20 ">Log in</a>
+    <a href="/signup "><img src="../assets/images/signup.png " height="20 ">Sign up</a>
 </mat-toolbar>
 <div id="bg">
     <img src="../assets/images/background.png">
