--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,26 @@
 #toolbar {
     color: "gray";
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 60px;
+    padding: 0;
+    margin: 0;
 }
 
 a {
     color: black;
-    margin-right: 70px
+    margin-right: 70px;
+    text-decoration: none;
+}
+
+a:hover {
+    font-size: 21px;
 }
 
 #search-bar {
-    padding: 5px;
+    padding: 10px;
     margin-right: 70px;
     border-radius: 25px;
     border: hidden;
+    width: 480px;
 }
 
 #bg {
