--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar id="toolbar" fxLayout="row" fxLayoutAlign="space-evenly center">
+<mat-toolbar id="toolbar" fxLayout="row" fxLayoutAlign="center center">
     <a href="/"><img src="../assets/images/drawer.png" height="12"></a>
     <a href="/"><img src="../assets/images/logo.png " height="30 "></a>
     <input type="search " placeholder="Search " name="search " id="search-bar">
@@ -14,6 +14,14 @@
     <button class="button">
       Post a question
     </button>
+</div>
+<div id="center" fxLayout="column" fxLayoutAlign="space-between center">
+    <span style="width: 50%;">
+        <h1 style="padding:20px"> For developers, by developers</h1>
+        <div class="rectangle" ></div>
+        <h2 style="padding:20px">Stack Overflow is an open community for anyone that codes. We help you get answers to your toughest coding questions, share knowledge with your coworkers in private, and find your next dream job.</h2>
+        
+    </span>
 </div>
 <div id="bottom">
     <p>hello world</p>
