--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,17 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: Roboto, sans-serif;
+    font-family: monospace;
     max-width: 100%;
+    text-align: center;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
