--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
 #toolbar {
     color: "gray";
-    height: 60px;
-    padding: 0;
-    margin: 0;
+    height: 55px;
+    border-top: 4px solid;
+    border-top-color: #F48024;
 }
 
 a {
