--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,13 +5,13 @@
     border-top-color: #F48024;
 }
 
-a {
+#toolbar a {
     color: black;
     margin-right: 70px;
     text-decoration: none;
 }
 
-a:hover {
+#toolbar a:hover {
     font-size: 21px;
 }
 
@@ -86,7 +86,7 @@ a:hover {
 
 #center {
     background-color: white;
-    padding: 15px;
+    padding: 25px;
 }
 
 .rectangle {
@@ -96,4 +96,19 @@ a:hover {
     width: 100%;
     align-self: center;
     display: flex;
+}
+
+#center2 {
+    margin: 0% 25%;
+    max-width: 100%;
+    text-align: center;
+}
+
+#center2 a {
+    text-decoration: none;
+    color: #F48024;
+}
+
+mat-card:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
