--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,7 +75,7 @@
     </mat-card>
     <mat-card>
         <mat-card-header>
-            <div mat-card-avatar style="background-image: url(../assets/images/Hari.JPG);background-size: cover;"></div>
+            <div mat-card-avatar style="background-image: url(../assets/images/pranav.jpg);background-size: cover;"></div>
             <mat-card-title>
                 <h3 style="color:black; ">Pranav Hegde</h3>
             </mat-card-title>
