--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,3 +22,10 @@
     border: hidden;
     width: 480px;
 }
+
+#bottom {
+    background-color: black;
+    text-align: center;
+    position: relative;
+    max-width: 100%;
+}
