--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,7 +53,7 @@
     </div>
 </div>
 
-<div id="bottom">
+<!-- <div id="bottom">
     <h2 style="color: white;">Developers</h2>
     <mat-card>
         <mat-card-header>
@@ -74,4 +74,4 @@
             <mat-card-subtitle style="text-align: start;">1MS17CS082</mat-card-subtitle>
         </mat-card-header>
     </mat-card>
-</div>
+</div> -->
