--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,6 @@
-<p>login works!</p>
+<form method="POST">
+    <h1> Login Page</h1>
+    <input type="email" placeholder="E-mail" name="email"><br>
+    <input type="password" name="password" placeholder="Password"><br>
+    <input type="submit" value="Login" onclick=''><br>
+</form>
