--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,11 +1,17 @@
-<form method="POST">
+<form [formGroup]='user' (ngSubmit)=signup()>
     <label for="first_name">First Name</label><br>
-    <input type="text" name="first_name" placeholder="John "><br>
+    <input type="text" name="firstname" placeholder="John " formControlName="firstName"><br>
     <label for="last_name">Last Name</label><br>
-    <input type="text" name="last_name" placeholder="Doe"><br>
+    <input type="text" name="lastname" placeholder="Doe" formControlName="lastName"><br>
+    <label for="last_name">Username</label><br>
+    <input type="text" name="username" placeholder="JohnDoe123" formControlName="userName"><br>
     <label for="email">E-mail</label><br>
-    <input type="text" name="email" placeholder="johndoe@email.com"><br>
+    <input type="text" name="email" placeholder="johndoe@email.com" formControlName="email"><br>
     <label for="password">Password</label><br>
-    <input type="text" name="password" placeholder="Password"><br>
+    <input type="password" name="password" placeholder="Password" formControlName="password"><br>
     <button type="submit" mat-raised-button color="primary" onclick="">Register</button><br>
 </form>
+<mat-form-field appearance="outline">
+    <mat-label> First Name </mat-label>
+    <input matInput placeholder="John">
+</mat-form-field>
