--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,7 +42,7 @@
             <mat-card-content>
                 <br><br>
                 <p>
-                    Find the right job through high quality listings and search for roles based on <br>title, technology stack, salary, location, and more..
+                    Find the right job through high quality listings and search for roles based on title, technology stack, <br>salary, location, and more..
                 </p>
             </mat-card-content>
             <mat-card-actions>
