--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,36 @@
 <mat-toolbar id="toolbar" fxLayout="row" fxLayoutAlign="center center">
-    <a href="/"><img src="../assets/images/drawer.png" height="12"></a>
+    <button mat-icon-button [matMenuTriggerFor]="menu" style="padding-right: 50px;">
+    <mat-icon>more_vert</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+        <a href="/"><button mat-menu-item>
+      <mat-icon>home</mat-icon>
+      <span>Home</span>
+    </button></a>
+        <button mat-menu-item>
+      <mat-icon>voicemail</mat-icon>
+      <span>Check voice mail</span>
+    </button>
+        <button mat-menu-item>
+      <mat-icon>notifications_off</mat-icon>
+      <span>Disable alerts</span>
+    </button>
+    </mat-menu>
+
     <a href="/"><img src="../assets/images/logo.png " height="30 "></a>
     <input type="search " placeholder="Search " name="search " id="search-bar">
-    <a href="/login "><img src="../assets/images/login.png " height="20 ">Log in</a>
-    <a href="/signup "><img src="../assets/images/signup.png " height="20 ">Sign up</a>
+    <div *ngIf=!logedin>
+        <a href="/login "><img src="../assets/images/login.png " height="20 ">Log in</a>
+        <a href="/signup "><img src="../assets/images/signup.png " height="20 ">Sign up</a>
+    </div>
+    <div *ngIf=logedin>
+        <a href="/profile">Profile<mat-icon>{{'face'}}</mat-icon></a>
+        <a href="/logout ">Log Out<mat-icon>{{'power_settings_new'}}</mat-icon></a>
+        <mat-menu>
+            <button mat-menu-item>Settings</button>
+            <button mat-menu-item>Help</button>
+        </mat-menu>
+    </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
 <div id="bottom">
