--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,8 @@
 
 #search-bar {
     padding: 10px;
-    margin-right: 70px;
+    padding-right: 0px;
+    // margin-right: 70px;
     border-radius: 25px;
     border: hidden;
     width: 480px;
