--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,8 @@
-<label for="email">E-mail</label><br>
-<input type="text" name="email" placeholder="johndoe@email.com"><br>
-<label for="password">Password</label><br>
-<input type="text" name="password" placeholder="Password"><br>
-<button type="submit" mat-raised-button color="primary" onsubmit="">Login</button><br>
+<form [formGroup]='login' (ngSubmit)=loginUser()>
+    <label for="email">E-mail</label><br>
+    <input matInput placeholder="Johndoe@email.com" formControlName="email"
+        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+    <label for="password">Password</label><br>
+    <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
+    <button type="submit" mat-raised-button color="primary" [disabled]="!login.valid">Login</button><br>
+</form>
