--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,10 +18,9 @@
     </mat-menu>
 
     <a href="/"><img src="../assets/images/logo.png " height="30 "></a>
-    <input type="search " placeholder="Search " name="search " id="search-bar">
-    <button mat-icon-button (click)="search()" style="margin-right: 70px;">
-        <mat-icon>search</mat-icon>
-    </button>
+    <input type="search" [formControl]="searchBar" placeholder=" Search " id="search-bar">
+    <button mat-icon-button (click)="search()" style="margin-right: 70px;"><mat-icon>search</mat-icon></button>
+
     <div *ngIf=!isUserLoggedIn>
         <a href="/login "><img src="../assets/images/login.png " height="20 ">Log in</a>
         <a href="/signup "><img src="../assets/images/signup.png " height="20 ">Sign up</a>
