--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,3 +58,27 @@
         </mat-card-header>
     </mat-card>
 </div>
+<!-- <mat-accordion>
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title style="font-weight: 900;">
+                <div mat-card-avatar style="background-image: url(../assets/images/Hari.JPG);background-size: cover; margin-right: 20px;"></div>
+                Harivind Premkumar
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+            1MS17CS034
+        </mat-list>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                <div mat-card-avatar style="background-image: url(../assets/images/pranav.jpg);background-size: cover;"></div>
+                Pranav Hegde
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-list>
+            1MS17CS082
+        </mat-list>
+    </mat-expansion-panel>
+</mat-accordion> -->
