--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -2,18 +2,25 @@
     <mat-card class="post-card">
         <mat-card-header>
             <div mat-card-avatar class="post-header-image"></div>
-            <mat-card-title>Shiba Inu</mat-card-title>
-            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+            <mat-card-title>{{post.question.heading}}</mat-card-title>
+            <mat-card-subtitle>{{post.question.user}}</mat-card-subtitle>
         </mat-card-header>
         <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg">
         <mat-card-content>
-            <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred for hunting.
-            </p>
+            <div>
+                <div mat-line><a href="/post?questionID={{post.question._id}}">{{post.question.heading}}</a></div>
+                <div mat-line> {{post.question.description}} </div>
+                <br>
+                <button mat-icon-button id="votes" matBadge={{post.question.upvotes-post.question.downvotes}}
+                    matBadgeColor="primary">Votes</button>
+                <div mat-line></div>
+                <div mat-line></div>
+                <mat-divider></mat-divider>
+            </div>
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button>LIKE</button>
-            <button mat-button>SHARE</button>
+            <button mat-button>Upvote</button>
+            <button mat-button>Downvote</button>
         </mat-card-actions>
     </mat-card>
 </div>
