--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -1,6 +1,8 @@
 .signup {
-    background-color: rgb(201, 107, 52);
-    height: 100%;
+    padding: 25px;
+    background: linear-gradient(to bottom, #ff9933 7%, #ffffff 98%);
+    height: 59%;
+    width: 100%;
 }
 
 input.example-right-align {
@@ -22,4 +24,13 @@ input.example-right-align::-webkit-inner-spin-button {
 
 input.example-right-align {
     -moz-appearance: textfield;
+}
+
+#writeup {
+    width: 20%;
+    margin-right: 30px;
+    .h1 {
+        font-size: 30px;
+        font-weight: 900;
+    }
 }
