--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
                 </p>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-raised-button color="primary"> Browse Questions</button>
+                <button mat-raised-button color="primary" (click)="browse()"> Browse Questions</button>
             </mat-card-actions>
         </mat-card>
     </div>
