--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -52,7 +52,7 @@
 
 .form {
     // min-width: 150px;
-    margin: 0% 15%;
+    margin: 0% 15% 20px 15%;
     max-width: 90%;
     padding: 35px;
     width: 100%;
