--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -18,7 +18,7 @@
         <mat-form-field appearance="outline">
             <mat-label> Enter password</mat-label>
             <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
-            <button type="button" matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <button mat-icon-button type="button" matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
               <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
             <mat-error>Must contain minimum 8 characters</mat-error>
