Added upvote downvote functionality

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="space-between center">
     <mat-card class="post-card">
         <mat-card-header>
-            <img mat-card-avatar class="post-header-image" src={{user.profilePic}} alt="">
+            <!-- <img mat-card-avatar class="post-header-image" src={{user.profilePic}} alt=""> -->
             <mat-card-title>{{post.question.heading}}</mat-card-title>
             <mat-card-subtitle>{{post.question.user}}</mat-card-subtitle>
         </mat-card-header>
@@ -10,15 +10,26 @@
             <div>
                 <div mat-line> {{post.question.description}} </div>
                 <br>
-                <button mat-icon-button id="votes" matBadge={{post.question.upvotes-post.question.downvotes}} matBadgeColor="primary">Votes</button>
+                <button mat-icon-button id="votes"
+                    matBadge={{post.question.upvotes.length-post.question.downvotes.length}}
+                    matBadgeColor="primary">Votes</button>
                 <div mat-line></div>
                 <div mat-line></div>
                 <mat-divider></mat-divider>
             </div>
         </mat-card-content>
-        <mat-card-actions *ngIf="currentUser!=post.question.user">
-            <button mat-button>Upvote</button>
-            <button mat-button>Downvote</button>
+        <mat-card-actions *ngIf="currentUser!=post.question.user && upvotedQues">
+            <button mat-button style="color: forestgreen;"
+                (click)="upvote('Question',post.question._id,0)">Upvote</button>
+            <button mat-button (click)="downvote('Question',post.question._id,0)">Downvote</button>
+        </mat-card-actions>
+        <mat-card-actions *ngIf="currentUser!=post.question.user && downvotedQues">
+            <button mat-button (click)="upvote('Question',post.question._id,0)">Upvote</button>
+            <button mat-button style="color: red" (click)="downvote('Question',post.question._id,0)">Downvote</button>
+        </mat-card-actions>
+        <mat-card-actions *ngIf="currentUser!=post.question.user && !downvotedQues && !upvotedQues">
+            <button mat-button (click)="upvote('Question',post.question._id,0)">Upvote</button>
+            <button mat-button (click)="downvote('Question',post.question._id,0)">Downvote</button>
         </mat-card-actions>
         <mat-card-actions *ngIf="currentUser==post.question.user">
             <button mat-button (click)=deleteQuestion(post.question)>Delete Question</button>
@@ -28,7 +39,7 @@
         Answers
     </div>
 
-    <div *ngFor="let answer of post.answers">
+    <div *ngFor="let answer of post.answers;index as i">
         <mat-card class="post-card">
             <mat-card-header>
                 <img mat-card-avatar class="post-header-image" src='../../assets/images/noDisplay.png' alt="">
@@ -38,15 +49,24 @@
                 <div>
                     <div mat-line> {{answer.description}} </div>
                     <br>
-                    <button mat-icon-button id="votes" matBadge={{answer.upvotes-answer.downvotes}} matBadgeColor="primary">Votes</button>
+                    <button mat-icon-button id="votes" matBadge={{answer.upvotes.length-answer.downvotes.length}}
+                        matBadgeColor="primary">Votes</button>
                     <div mat-line></div>
                     <div mat-line></div>
                     <mat-divider></mat-divider>
                 </div>
             </mat-card-content>
-            <mat-card-actions *ngIf="currentUser!=answer.user">
-                <button mat-button>Upvote</button>
-                <button mat-button>Downvote</button>
+            <mat-card-actions *ngIf="currentUser!=answer.user && upvotedAns[i]">
+                <button mat-button style="color: forestgreen;" (click)="upvote('Answer',answer._id,i)">Upvote</button>
+                <button mat-button (click)="downvote('Answer',answer._id,i)">Downvote</button>
+            </mat-card-actions>
+            <mat-card-actions *ngIf="currentUser!=answer.user && downvotedAns[i]">
+                <button mat-button (click)="upvote('Answer',answer._id,i)">Upvote</button>
+                <button mat-button style="color: red" (click)="downvote('Answer',answer._id,i)">Downvote</button>
+            </mat-card-actions>
+            <mat-card-actions *ngIf="currentUser!=answer.user && !downvotedAns[i] && !upvotedAns[i]">
+                <button mat-button (click)="upvote('Answer',answer._id,i)">Upvote</button>
+                <button mat-button (click)="downvote('Answer',answer._id,i)">Downvote</button>
             </mat-card-actions>
             <mat-card-actions *ngIf="currentUser==answer.user">
                 <button mat-button (click)=deleteAnswer(answer)>Delete Answer</button>
