--- a/src/app/pagenotfound/pagenotfound.component.html
+++ b/src/app/pagenotfound/pagenotfound.component.html
@@ -1,1 +1,4 @@
-<p>pagenotfound works!</p>
+<div id="notfound" fxLayout="column" fxLayoutAlign="center center">
+    <h1 style="font-weight: 900;font-size: 48px;"> Error 404 Page Not Found </h1>
+    <h2> Please Check the URL!</h2>
+</div>
