--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,11 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="space-between center">
     <mat-card class="post-card">
         <mat-card-header>
-            <img *ngIf="post.question.profilePic!=''" mat-card-avatar class="post-header-image"
-                src={{post.question.profilePic}} alt="">
-            <img *ngIf="post.question.profilePic==''" mat-card-avatar class="post-header-image"
-                src='../../assets/images/noDisplay.png' alt="">
-
+            <img mat-card-avatar class="post-header-image" src={{user.profilePic}} alt="">
             <mat-card-title>{{post.question.heading}}</mat-card-title>
             <mat-card-subtitle>{{post.question.user}}</mat-card-subtitle>
         </mat-card-header>
@@ -14,98 +10,46 @@
             <div>
                 <div mat-line> {{post.question.description}} </div>
                 <br>
-                <button mat-icon-button id="votes"
-                    matBadge={{post.question.upvotes.length-post.question.downvotes.length}}
-                    matBadgeColor="primary">Votes</button>
+                <button mat-icon-button id="votes" matBadge={{post.question.upvotes-post.question.downvotes}} matBadgeColor="primary">Votes</button>
                 <div mat-line></div>
                 <div mat-line></div>
                 <mat-divider></mat-divider>
             </div>
         </mat-card-content>
-        <mat-card-actions *ngIf="currentUser!=post.question.user && upvotedQues">
-            <button mat-icon-button style="color: forestgreen;" (click)="upvote('Question',post.question._id,0)">
-                <mat-icon>expand_less</mat-icon>
-            </button>
-            <button mat-icon-button (click)="downvote('Question',post.question._id,0)">
-                <mat-icon>expand_more</mat-icon>
-            </button>
-        </mat-card-actions>
-        <mat-card-actions *ngIf="currentUser!=post.question.user && downvotedQues">
-            <button mat-icon-button (click)="upvote('Question',post.question._id,0)">
-                <mat-icon>expand_less</mat-icon>
-            </button>
-            <button mat-icon-button style="color: red" (click)="downvote('Question',post.question._id,0)">
-                <mat-icon>expand_more</mat-icon>
-            </button>
-        </mat-card-actions>
-        <mat-card-actions *ngIf="currentUser!=post.question.user && !downvotedQues && !upvotedQues">
-            <button mat-icon-button (click)="upvote('Question',post.question._id,0)">
-                <mat-icon>expand_less</mat-icon>
-            </button>
-            <button mat-icon-button (click)="downvote('Question',post.question._id,0)">
-                <mat-icon>expand_more</mat-icon>
-            </button>
+        <mat-card-actions *ngIf="currentUser!=post.question.user">
+            <button mat-button>Upvote</button>
+            <button mat-button>Downvote</button>
         </mat-card-actions>
         <mat-card-actions *ngIf="currentUser==post.question.user">
-            <button mat-icon-button (click)=deleteQuestion(post.question)>
-                <mat-icon>delete</mat-icon>
-                Delete
-            </button>
+            <button mat-button (click)=deleteQuestion(post.question)>Delete Question</button>
         </mat-card-actions>
     </mat-card>
     <div mat-card-subtitle style="font-weight: 900;text-decoration: underline; font-size: 32px; color: black;">
         Answers
     </div>
 
-    <div *ngFor="let answer of post.answers;index as i">
+    <div *ngFor="let answer of post.answers">
         <mat-card class="post-card">
             <mat-card-header>
-                <img *ngIf="answer.profilePic!=''" mat-card-avatar class="post-header-image" src={{answer.profilePic}}
-                    alt="">
-                <img *ngIf="answer.profilePic==''" mat-card-avatar class="post-header-image"
-                    src='../../assets/images/noDisplay.png' alt="">
+                <img mat-card-avatar class="post-header-image" src='../../assets/images/noDisplay.png' alt="">
                 <mat-card-subtitle>{{answer.user}}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
                 <div>
                     <div mat-line> {{answer.description}} </div>
                     <br>
-                    <button mat-icon-button id="votes" matBadge={{answer.upvotes.length-answer.downvotes.length}}
-                        matBadgeColor="primary">Votes</button>
+                    <button mat-icon-button id="votes" matBadge={{answer.upvotes-answer.downvotes}} matBadgeColor="primary">Votes</button>
                     <div mat-line></div>
                     <div mat-line></div>
                     <mat-divider></mat-divider>
                 </div>
             </mat-card-content>
-            <mat-card-actions *ngIf="currentUser!=answer.user && upvotedAns[i]">
-                <button mat-icon-button style="color: forestgreen;" (click)="upvote('Answer',answer._id,i)">
-                    <mat-icon>expand_less</mat-icon>
-                </button>
-                <button mat-icon-button (click)="downvote('Answer',answer._id,i)">
-                    <mat-icon>expand_more</mat-icon>
-                </button>
-            </mat-card-actions>
-            <mat-card-actions *ngIf="currentUser!=answer.user && downvotedAns[i]">
-                <button mat-icon-button (click)="upvote('Answer',answer._id,i)">
-                    <mat-icon>expand_less</mat-icon>
-                </button>
-                <button mat-icon-button style="color: red" (click)="downvote('Answer',answer._id,i)">
-                    <mat-icon>expand_more</mat-icon>
-                </button>
-            </mat-card-actions>
-            <mat-card-actions *ngIf="currentUser!=answer.user && !downvotedAns[i] && !upvotedAns[i]">
-                <button mat-icon-button (click)="upvote('Answer',answer._id,i)">
-                    <mat-icon>expand_less</mat-icon>
-                </button>
-                <button mat-icon-button (click)="downvote('Answer',answer._id,i)">
-                    <mat-icon>expand_more</mat-icon>
-                </button>
+            <mat-card-actions *ngIf="currentUser!=answer.user">
+                <button mat-icon-button><mat-icon>expand_less</mat-icon></button>
+                <button mat-icon-button><mat-icon>expand_more</mat-icon></button>
             </mat-card-actions>
             <mat-card-actions *ngIf="currentUser==answer.user">
-                <button mat-icon-button (click)=deleteAnswer(answer)>
-                    <mat-icon>delete</mat-icon>
-                    Delete
-                </button>
+                <button mat-button (click)=deleteAnswer(answer)>Delete Answer</button>
             </mat-card-actions>
         </mat-card>
     </div>
